# nbody-simulation

./: .clang-format  .clangd  CMakeLists.txt  README.md  data_gen.py  data_visualization.py  symetric.py
sample-data/: sample-symmetric-output.csv  sample-symmetric.csv  sample_output.csv
scripts/: data_gen.py  data_visualization.py  symmetric.py
src/: CMakeLists.txt  constants.hpp  main.cpp
src/algorithms/: CMakeLists.txt  Leapfrog7.cpp  Leapfrog7.hpp
src/node/: CMakeLists.txt  NodeConfig.hpp  common.cpp  common.hpp  initial.cpp  initial.hpp  master.cpp  master.hpp  worker.cpp  worker.hpp
src/utils/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  MpiDatatypeRAII.hpp  ParticlesData.hpp  Point.cpp  Point.hpp  SimParams.hpp
